Improved folder structure and addition of User and Exam functionalitites

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "jO0g3feShTW8CnxzQw9kPMOIIBBpsp9LeuBf4olvF_9vj2m6ZxB6DfUWzc1mTLUJ7LuQ_OsANzOOiuWYu-HKdQ",
+    "Issuer": "JwtIssuer",
+    "Audience": "JwtAudience",
+    "Subject": "JwtSubject"
+  }
 }
